// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component Generator --flat should create the component correctly and export it in the entry point 1`] = `
"import { Component } from '@angular/core';

@Component({
  selector: 'proj-example',
  templateUrl: './example.component.html',
  styleUrls: ['./example.component.css'],
})
export class ExampleComponent {}
"
`;

exports[`component Generator --flat should create the component correctly and not export it when "export=false" 1`] = `
"import { Component } from '@angular/core';

@Component({
  selector: 'proj-example',
  templateUrl: './example.component.html',
  styleUrls: ['./example.component.css'],
})
export class ExampleComponent {}
"
`;

exports[`component Generator --path should create the component correctly and export it in the entry point 1`] = `
"import { Component } from '@angular/core';

@Component({
  selector: 'proj-example',
  templateUrl: './example.component.html',
  styleUrls: ['./example.component.css'],
})
export class ExampleComponent {}
"
`;

exports[`component Generator secondary entry points should create the component correctly and export it in the entry point 1`] = `
"import { Component } from '@angular/core';

@Component({
  selector: 'proj-example',
  templateUrl: './example.component.html',
  styleUrls: ['./example.component.css'],
})
export class ExampleComponent {}
"
`;

exports[`component Generator secondary entry points should create the component correctly and export it in the entry point 2`] = `
"export * from './lib/secondary.module';
export * from './lib/example/example.component';
"
`;

exports[`component Generator should create the component correctly and export it in the entry point when "export=true" 1`] = `
"import { Component } from '@angular/core';

@Component({
  selector: 'proj-example',
  templateUrl: './example.component.html',
  styleUrls: ['./example.component.css'],
})
export class ExampleComponent {}
"
`;

exports[`component Generator should create the component correctly and export it in the entry point when "export=true" 2`] = `
"export * from './lib/lib.module';
export * from './lib/example/example.component';
"
`;

exports[`component Generator should create the component correctly and export it in the entry point when is standalone and "export=true" 1`] = `
"import { Component } from '@angular/core';
import { CommonModule } from '@angular/common';

@Component({
  selector: 'proj-example',
  standalone: true,
  imports: [CommonModule],
  templateUrl: './example.component.html',
  styleUrls: ['./example.component.css'],
})
export class ExampleComponent {}
"
`;

exports[`component Generator should create the component correctly and not export it in the entry point when "export=false" 1`] = `
"import { Component } from '@angular/core';

@Component({
  selector: 'proj-example',
  templateUrl: './example.component.html',
  styleUrls: ['./example.component.css'],
})
export class ExampleComponent {}
"
`;

exports[`component Generator should create the component correctly and not export it in the entry point when is standalone and "export=false" 1`] = `
"import { Component } from '@angular/core';
import { CommonModule } from '@angular/common';

@Component({
  selector: 'proj-example',
  standalone: true,
  imports: [CommonModule],
  templateUrl: './example.component.html',
  styleUrls: ['./example.component.css'],
})
export class ExampleComponent {}
"
`;

exports[`component Generator should create the component correctly and not export it when "--skip-import=true" 1`] = `
"import { Component } from '@angular/core';

@Component({
  selector: 'proj-example',
  templateUrl: './example.component.html',
  styleUrls: ['./example.component.css'],
})
export class ExampleComponent {}
"
`;

exports[`component Generator should create the component correctly but not export it in the entry point when it does not exist 1`] = `
"import { Component } from '@angular/core';

@Component({
  selector: 'proj-example',
  templateUrl: './example.component.html',
  styleUrls: ['./example.component.css'],
})
export class ExampleComponent {}
"
`;
